Fix index name centering on mobile

--- a/src/assets/index.pcss
+++ b/src/assets/index.pcss
@@ -20,6 +20,9 @@ header {
 		flex-direction: column;
 		section {
 			text-align: center;
+			& > h1 {
+				margin: 0 auto;
+			}
 		}
 		nav > ul {
 			flex-direction: row;
